chore: split home page

--- a/index.html
+++ b/index.html
@@ -23,208 +23,8 @@
                 <p>Check out the official collection on OpenSea: <a href="https://opensea.io/collection/moody-brain-loopring"><i><b>Moody Brain by Loopring</b></i></a></p>
             </div>
             <div class="comp">
-                <p>X01 / 1001</p>
-                <p>Chuck Norris</p>
-                <img src="1001/900x900/3-4.png" alt="Loophead #1001"/>
-                <img src="comps/norris.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>X05 / 1005</p>
-                <p>Bill Clinton</p>
-                <img src="1005/900x900/0-1.png" alt="Loophead #1005"/>
-                <img src="comps/clinton.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>X06 / 1015</p>
-                <p>Action Jack Barker</p>
-                <img src="1015/900x900/2-1.png" alt="Loophead #1015"/>
-                <img src="comps/jack.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>110</p>
-                <p>Skeletor</p>
-                <img src="110/900x900/4-1.png" alt="Loophead #110"/>
-                <img src="comps/skeletor.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>X11 / 1016</p>
-                <p>Iron Man</p>
-                <img src="411/900x900/3-2.png" alt="Loophead #411"/>
-                <img src="comps/ironman.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>X17 / 1026</p>
-                <p>Aang</p>
-                <img src="1026/900x900/3-4.png" alt="Loophead #1026"/>
-                <img src="comps/aang.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>370</p>
-                <p>Piccolo</p>
-                <img src="370/900x900/2-4.png" alt="Loophead #370"/>
-                <img src="comps/piccolo.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>393</p>
-                <p>Roger Klotz</p>
-                <img src="393/900x900/2-2.png" alt="Loophead #393"/>
-                <img src="comps/klotz.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>X20 / 1029</p>
-                <p>Thelma + Daphne</p>
-                <img src="1029/900x900/3-2.png" alt="Loophead #1029"/>
-                <img src="comps/thelma.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>X25 / 1034</p>
-                <p>Celine Dion</p>
-                <img src="1034/900x900/2-1.png" alt="Loophead #1034"/>
-                <img src="comps/dion.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>X29 / 1038</p>
-                <p>Stanley</p>
-                <img src="729/900x900/3-4.png" alt="Loophead #729"/>
-                <img src="comps/stanley.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>X32 / 1041</p>
-                <p>Bob the Consultant</p>
-                <img src="1041/900x900/1-1.png" alt="Loophead #1041"/>
-                <img src="comps/bob.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>X36 / 1045</p>
-                <p>Zoe Saldana</p>
-                <img src="236/900x900/3-3.png" alt="Loophead #236"/>
-                <img src="comps/saldana.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>639</p>
-                <p>Smurfette</p>
-                <img src="639/900x900/3-1.png" alt="Loophead #639"/>
-                <img src="comps/smurfette.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>X42 / 1051</p>
-                <p>Mr. Spacely</p>
-                <img src="1051/900x900/2-0.png" alt="Loophead #1051"/>
-                <img src="comps/spacely.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>X43 / 1052</p>
-                <p>Dr. Gero</p>
-                <img src="1052/900x900/1-4.png" alt="Loophead #1052"/>
-                <img src="comps/gero.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>X44 / 1053</p>
-                <p>Zeus</p>
-                <img src="1053/900x900/3-4.png" alt="Loophead #1053"/>
-                <img src="comps/zeus.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>X51 / 1060</p>
-                <p>Dr. Phil</p>
-                <img src="1060/900x900/1-0.png" alt="Loophead #1060"/>
-                <img src="comps/phil.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>X56 / 1065</p>
-                <p>Bill Murray</p>
-                <img src="1065/900x900/3-4.png" alt="Loophead #1065"/>
-                <img src="comps/murray.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>656</p>
-                <p>White Walker</p>
-                <img src="656/900x900/0-1.png" alt="Loophead #656"/>
-                <img src="comps/walker.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>X57 / 1066</p>
-                <p>Amy Schumer</p>
-                <img src="1066/900x900/1-0.png" alt="Loophead #1066"/>
-                <img src="comps/schumer.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>557</p>
-                <p>Rey Skywalker</p>
-                <img src="557/900x900/3-3.png" alt="Loophead #557"/>
-                <img src="comps/skywalker.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>714</p>
-                <p>Aladdin</p>
-                <img src="714/900x900/4-2.png" alt="Loophead #714"/>
-                <img src="comps/aladdin.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>758</p>
-                <p>Ahsoka Tano</p>
-                <img src="758/900x900/3-3.png" alt="Loophead #758"/>
-                <img src="comps/ahsoka.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>770</p>
-                <p>@Brojez</p>
-                <img src="770/900x900/4-4.png" alt="Loophead #770"/>
-                <img src="comps/brojez.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>X60 / 1069</p>
-                <p>Nicolas Cage with Sunglasses</p>
-                <img src="1069/900x900/3-1.png" alt="Loophead #1069"/>
-                <img src="comps/cage.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>561</p>
-                <p>El Diablo</p>
-                <img src="561/900x900/4-2.png" alt="Loophead #561"/>
-                <img src="comps/diablo.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>561</p>
-                <p>Killface</p>
-                <img src="561/900x900/0-1.png" alt="Loophead #561"/>
-                <img src="comps/killface.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>1006</p>
-                <p>The Riddler</p>
-                <img src="1006/900x900/1-3.png" alt="Loophead #1006"/>
-                <img src="comps/riddler.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>X66 / 1075</p>
-                <p>Freddie Mercury</p>
-                <img src="1075/900x900/3-3.png" alt="Loophead #1075"/>
-                <img src="comps/mercury.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>X75 / 1084</p>
-                <p>David Hasselhoff</p>
-                <img src="1084/900x900/3-2.png" alt="Loophead #1084"/>
-                <img src="comps/hoff.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>X78 / 1087</p>
-                <p>Paul Shaffer</p>
-                <img src="1087/900x900/2-2.png" alt="Loophead #1087"/>
-                <img src="comps/shaffer.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>X83 / 1092</p>
-                <p>Doc Brown</p>
-                <img src="1092/900x900/1-4.png" alt="Loophead #1092"/>
-                <img src="comps/doc.png" alt="Comparisons"/>
-            </div>
-            <div class="comp">
-                <p>583</p>
-                <p>Dr. Finklestein</p>
-                <img src="583/900x900/2-3.png" alt="Loophead #583"/>
-                <img src="comps/finklestein.png" alt="Comparisons"/>
+                <button>Loopheads Explorer</button>
+                <button>Looplegangers</button>
             </div>
         </div>
     </body>
