chore: initial redesign completed

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
         <![endif]-->
         <div id="container">
             <div id="about">
+                <img src="smash_chaos_900x900.gif" alt="Loopheads Showcase" />
                 <p>This is a fan-made site showing loopalikes the community has noticed between the Loopheads and various celebrities/characters from pop culture.</p>
-                <p>For more info on the Moody Brain collection, visit the official sites: <a href="https://loopheads.info">https://loopheads.info</a>, <a href="https://loopheads.world">https://loopheads.world</a></p>
-                <p>Check out the official collection on OpenSea: <a href="https://opensea.io/collection/moody-brain-loopring"><i><b>Moody Brain by Loopring</b></i></a></p>
+                <p>For more info on the Moody Brain collection, visit the official sites:<br /><a href="https://loopheads.info">https://loopheads.info</a> &bull; <a href="https://loopheads.world">https://loopheads.world</a></p>
+                <p>Check out the official collection on OpenSea:<br /><a href="https://opensea.io/collection/moody-brain-loopring"><i><b>Moody Brain by Loopring</b></i></a></p>
             </div>
             <div class="comp">
-                <button>Loopheads Explorer</button>
-                <button>Looplegangers</button>
+                <a href="https://explorer.loopalikes.club"><button>Loopheads Explorer</button></a>
+                <a href="/looplegangers.html"><button>Looplegangers</button></a>
             </div>
         </div>
     </body>
