--- a/looplegangers.html
+++ b/looplegangers.html
@@ -17,7 +17,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="container">
-            <div id="about">
+            <div class="comp">
                 <h1>Looplegangers Archive</h1>
             </div>
             <div class="comp">
