--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <![endif]-->
         <div id="container">
             <div id="about">
+                <p><small><i>This is a fan-made site for all things Loopheads from the Moody Brain NFT Collection.</i></small></p>
                 <img src="smash_chaos_900x900.gif" alt="Loopheads Showcase" />
-                <p>This is a fan-made site showing loopalikes the community has noticed between the Loopheads and various celebrities/characters from pop culture.</p>
                 <p>For more info on the Moody Brain collection, visit the official sites:<br /><a href="https://loopheads.info">https://loopheads.info</a> &bull; <a href="https://loopheads.world">https://loopheads.world</a></p>
                 <p>Check out the official collection on OpenSea:<br /><a href="https://opensea.io/collection/moody-brain-loopring"><i><b>Moody Brain by Loopring</b></i></a></p>
             </div>
