--- a/looplegangers.html
+++ b/looplegangers.html
@@ -21,6 +21,9 @@
                 <h1>Looplegangers Archive</h1>
             </div>
             <div class="comp">
+                <h3>A list of loopalikes the community has noticed between Loopheads and celebrities/characters from pop-culture.</h3>
+            </div>
+            <div class="comp">
                 <p>X01 / 1001</p>
                 <p>Chuck Norris</p>
                 <img src="1001/900x900/3-4.png" alt="Loophead #1001"/>
