--- a/looplegangers.html
+++ b/looplegangers.html
@@ -108,6 +108,12 @@
                 <img src="comps/saldana.png" alt="Comparisons"/>
             </div>
             <div class="comp">
+                <p>X38 / 1047</p>
+                <p>Al Capone</p>
+                <img src="1047/900x900/4-2.png" alt="Loophead #1047"/>
+                <img src="comps/capone.png" alt="Comparisons"/>
+            </div>
+            <div class="comp">
                 <p>639</p>
                 <p>Smurfette</p>
                 <img src="639/900x900/3-1.png" alt="Loophead #639"/>
