fix: typos and tidy up

--- a/looplegangers.html
+++ b/looplegangers.html
@@ -19,7 +19,7 @@
         <div id="container">
             <div class="comp">
                 <h1>Looplegangers Archive</h1>
-                <h3>A list of loopalikes the community has noticed between Loopheads pop-culture.</h3>
+                <h3>A list of loopalikes the community has noticed between Loopheads and pop-culture.</h3>
             </div>
             <div class="drop">
                 <hr noshade>
@@ -34,103 +34,103 @@
                         <img src="comps/norris.png" alt="Chuck Norris"/>
                     </div>
                     <div class="comp">
-                        <p>X05 / 1005</p>
+                        <p><b>X05 / 1005</b></p>
                         <p>Bill Clinton</p>
                         <img src="1005/900x900/0-1.png" alt="Loophead #1005"/>
                         <img src="comps/clinton.png" alt="Bill Clinton"/>
                     </div>
                     <div class="comp">
-                        <p>X06 / 1015</p>
+                        <p><b>X06 / 1015</b></p>
                         <p>Action Jack Barker</p>
                         <img src="1015/900x900/2-1.png" alt="Loophead #1015"/>
                         <img src="comps/jack.png" alt="Action Jack Barker"/>
                     </div>
                     <div class="comp">
-                        <p>X25 / 1034</p>
+                        <p><b>X25 / 1034</b></p>
                         <p>Celine Dion</p>
                         <img src="1034/900x900/2-1.png" alt="Loophead #1034"/>
                         <img src="comps/dion.png" alt="Celine Dion"/>
                     </div>
                     <div class="comp">
-                        <p>X28 / 1037</p>
+                        <p><b>X28 / 1037</b></p>
                         <p>Pete Davidson</p>
                         <img src="1037/900x900/2-1.png" alt="Loophead #1037"/>
                         <img src="comps/davidson.png" alt="Pete Davidson"/>
                     </div>
                     <div class="comp">
-                        <p>X29 / 1038</p>
+                        <p><b>X29 / 1038</b></p>
                         <p>Stanley</p>
                         <img src="729/900x900/3-4.png" alt="Loophead #729"/>
                         <img src="comps/stanley.png" alt="Stanley"/>
                     </div>
                     <div class="comp">
-                        <p>X32 / 1041</p>
+                        <p><b>X32 / 1041</b></p>
                         <p>Bob the Consultant</p>
                         <img src="1041/900x900/1-1.png" alt="Loophead #1041"/>
                         <img src="comps/bob.png" alt="Bob"/>
                     </div>
                     <div class="comp">
-                        <p>X36 / 1045</p>
+                        <p><b>X36 / 1045</b></p>
                         <p>Zoe Saldana</p>
                         <img src="236/900x900/3-3.png" alt="Loophead #236"/>
                         <img src="comps/saldana.png" alt="Zoe Saldana"/>
                     </div>
                     <div class="comp">
-                        <p>X38 / 1047</p>
+                        <p><b>X38 / 1047</b></p>
                         <p>Al Capone</p>
                         <img src="1047/900x900/4-2.png" alt="Loophead #1047"/>
                         <img src="comps/capone.png" alt="Al Capone"/>
                     </div>
                     <div class="comp">
-                        <p>X42 / 1051</p>
+                        <p><b>X42 / 1051</b></p>
                         <p>Mr. Spacely</p>
                         <img src="1051/900x900/2-0.png" alt="Loophead #1051"/>
                         <img src="comps/spacely.png" alt="Mr. Spacely"/>
                     </div>
                     <div class="comp">
-                        <p>X51 / 1060</p>
+                        <p><b>X51 / 1060</b></p>
                         <p>Dr. Phil</p>
                         <img src="1060/900x900/1-0.png" alt="Loophead #1060"/>
                         <img src="comps/phil.png" alt="Dr. Phil"/>
                     </div>
                     <div class="comp">
-                        <p>X56 / 1065</p>
+                        <p><b>X56 / 1065</b></p>
                         <p>Bill Murray</p>
                         <img src="1065/900x900/3-4.png" alt="Loophead #1065"/>
                         <img src="comps/murray.png" alt="Bill Murray"/>
                     </div>
                     <div class="comp">
-                        <p>X57 / 1066</p>
+                        <p><b>X57 / 1066</b></p>
                         <p>Amy Schumer</p>
                         <img src="1066/900x900/1-0.png" alt="Loophead #1066"/>
                         <img src="comps/schumer.png" alt="Amy Schumer"/>
                     </div>
                     <div class="comp">
-                        <p>X58 / 1069</p>
+                        <p><b>X58 / 1069</b></p>
                         <p>Nicolas Cage with Sunglasses</p>
                         <img src="1069/900x900/3-1.png" alt="Loophead #1069"/>
                         <img src="comps/cage.png" alt="Nicolas Cage"/>
                     </div>
                     <div class="comp">
-                        <p>X66 / 1075</p>
+                        <p><b>X66 / 1075</b></p>
                         <p>Freddie Mercury</p>
                         <img src="1075/900x900/3-3.png" alt="Loophead #1075"/>
                         <img src="comps/mercury.png" alt="Freddie Mercury"/>
                     </div>
                     <div class="comp">
-                        <p>X70 / 1079</p>
+                        <p><b>X70 / 1079</b></p>
                         <p>Rick Moranis</p>
                         <img src="1079/900x900/3-3.png" alt="Loophead #1079"/>
                         <img src="comps/moranis.png" alt="Rick Moranis"/>
                     </div>
                     <div class="comp">
-                        <p>X73 / 1084</p>
+                        <p><b>X73 / 1084</b></p>
                         <p>David Hasselhoff</p>
                         <img src="1084/900x900/3-2.png" alt="Loophead #1084"/>
                         <img src="comps/hoff.png" alt="David Hasselhoff"/>
                     </div>
                     <div class="comp">
-                        <p>X78 / 1087</p>
+                        <p><b>X78 / 1087</b></p>
                         <p>Paul Shaffer</p>
                         <img src="1087/900x900/2-2.png" alt="Loophead #1087"/>
                         <img src="comps/shaffer.png" alt="Paul Shaffer"/>
@@ -138,115 +138,115 @@
                 </div>
                 <div class="category" id="drop1-unique">
                     <div class="comp">
-                        <p>X11 / 1016</p>
+                        <p><b>X11 / 1016</b></p>
                         <p>Iron Man</p>
                         <img src="411/900x900/3-2.png" alt="Loophead #411"/>
                         <img src="comps/ironman.png" alt="Iron Man"/>
                     </div>
                     <div class="comp">
-                        <p>X83 / 1092</p>
+                        <p><b>X83 / 1092</b></p>
                         <p>Doc Brown</p>
                         <img src="1092/900x900/1-4.png" alt="Loophead #1092"/>
                         <img src="comps/doc.png" alt="Doc Brown"/>
                     </div>
                     <div class="comp">
-                        <p>110</p>
+                        <p><b>110</b></p>
                         <p>Skeletor</p>
                         <img src="110/900x900/4-1.png" alt="Loophead #110"/>
                         <img src="comps/skeletor.png" alt="Skeletor"/>
                     </div>
                     <div class="comp">
-                        <p>370</p>
+                        <p><b>370</b></p>
                         <p>Piccolo</p>
                         <img src="370/900x900/2-4.png" alt="Loophead #370"/>
                         <img src="comps/piccolo.png" alt="Piccolo"/>
                     </div>
                     <div class="comp">
-                        <p>393</p>
+                        <p><b>393</b></p>
                         <p>Roger Klotz</p>
                         <img src="393/900x900/2-2.png" alt="Loophead #393"/>
                         <img src="comps/klotz.png" alt="Roger Klotz"/>
                     </div>
                     <div class="comp">
-                        <p>557</p>
+                        <p><b>557</b></p>
                         <p>Rey Skywalker</p>
                         <img src="557/900x900/3-3.png" alt="Loophead #557"/>
                         <img src="comps/skywalker.png" alt="Rey Skywalker"/>
                     </div>
                     <div class="comp">
-                        <p>561</p>
+                        <p><b>561</b></p>
                         <p>Killface</p>
                         <img src="561/900x900/0-1.png" alt="Loophead #561"/>
                         <img src="comps/killface.png" alt="Killface"/>
                     </div>
                     <div class="comp">
-                        <p>583</p>
+                        <p><b>583</b></p>
                         <p>Dr. Finklestein</p>
                         <img src="583/900x900/2-3.png" alt="Loophead #583"/>
                         <img src="comps/finklestein.png" alt="Dr. Finklestein"/>
                     </div>
                     <div class="comp">
-                        <p>639</p>
+                        <p><b>639</b></p>
                         <p>Smurfette</p>
                         <img src="639/900x900/3-1.png" alt="Loophead #639"/>
                         <img src="comps/smurfette.png" alt="Smurfette"/>
                     </div>
                     <div class="comp">
-                        <p>656</p>
+                        <p><b>656</b></p>
                         <p>White Walker</p>
                         <img src="656/900x900/0-1.png" alt="Loophead #656"/>
                         <img src="comps/walker.png" alt="White Walker"/>
                     </div>
                     <div class="comp">
-                        <p>714</p>
+                        <p><b>714</b></p>
                         <p>Aladdin</p>
                         <img src="714/900x900/4-2.png" alt="Loophead #714"/>
                         <img src="comps/aladdin.png" alt="Aladdin"/>
                     </div>
                     <div class="comp">
-                        <p>758</p>
+                        <p><b>758</b></p>
                         <p>Ahsoka Tano</p>
                         <img src="758/900x900/3-3.png" alt="Loophead #758"/>
                         <img src="comps/ahsoka.png" alt="Ahsoka Tano"/>
                     </div>
                     <div class="comp">
-                        <p>770</p>
+                        <p><b>770</b></p>
                         <p>@Brojez</p>
                         <img src="770/900x900/4-4.png" alt="Loophead #770"/>
                         <img src="comps/brojez.png" alt="@Brojez Gronked"/>
                     </div>
                     <div class="comp">
-                        <p>1006</p>
+                        <p><b>1006</b></p>
                         <p>The Riddler</p>
                         <img src="1006/900x900/1-3.png" alt="Loophead #1006"/>
                         <img src="comps/riddler.png" alt="The Riddler"/>
                     </div>
                     <div class="comp">
-                        <p>1026</p>
+                        <p><b>1026</b></p>
                         <p>Aang</p>
                         <img src="1026/900x900/3-4.png" alt="Loophead #1026"/>
                         <img src="comps/aang.png" alt="Aang"/>
                     </div>
                     <div class="comp">
-                        <p>1029</p>
+                        <p><b>1029</b></p>
                         <p>Thelma + Daphne</p>
                         <img src="1029/900x900/3-2.png" alt="Loophead #1029"/>
                         <img src="comps/thelma.png" alt="Thelma & Daphne"/>
                     </div>
                     <div class="comp">
-                        <p>1052</p>
+                        <p><b>1052</b></p>
                         <p>Dr. Gero</p>
                         <img src="1052/900x900/1-4.png" alt="Loophead #1052"/>
                         <img src="comps/gero.png" alt="Dr. Gero"/>
                     </div>
                     <div class="comp">
-                        <p>1053</p>
+                        <p><b>1053</b></p>
                         <p>Zeus</p>
                         <img src="1053/900x900/3-4.png" alt="Loophead #1053"/>
                         <img src="comps/zeus.png" alt="Zeus"/>
                     </div>
                     <div class="comp">
-                        <p>1070</p>
+                        <p><b>1070</b></p>
                         <p>El Diablo</p>
                         <img src="1070/900x900/4-2.png" alt="Loophead #561"/>
                         <img src="comps/diablo.png" alt="El Diablo"/>
