--- a/looplegangers.html
+++ b/looplegangers.html
@@ -46,6 +46,12 @@
                         <img src="comps/jack.png" alt="Action Jack Barker"/>
                     </div>
                     <div class="comp">
+                        <p><b>X11 / 1016</b></p>
+                        <p>Iron Man</p>
+                        <img src="411/900x900/3-2.png" alt="Loophead #411"/>
+                        <img src="comps/ironman.png" alt="Iron Man"/>
+                    </div>
+                    <div class="comp">
                         <p><b>X25 / 1034</b></p>
                         <p>Celine Dion</p>
                         <img src="1034/900x900/2-1.png" alt="Loophead #1034"/>
@@ -135,25 +141,25 @@
                         <img src="1087/900x900/2-2.png" alt="Loophead #1087"/>
                         <img src="comps/shaffer.png" alt="Paul Shaffer"/>
                     </div>
-                </div>
-                <div class="category" id="drop1-unique">
-                    <div class="comp">
-                        <p><b>X11 / 1016</b></p>
-                        <p>Iron Man</p>
-                        <img src="411/900x900/3-2.png" alt="Loophead #411"/>
-                        <img src="comps/ironman.png" alt="Iron Man"/>
-                    </div>
                     <div class="comp">
                         <p><b>X83 / 1092</b></p>
                         <p>Doc Brown</p>
                         <img src="1092/900x900/1-4.png" alt="Loophead #1092"/>
                         <img src="comps/doc.png" alt="Doc Brown"/>
                     </div>
+                </div>
+                <div class="category" id="drop1-unique">
                     <div class="comp">
                         <p><b>110</b></p>
                         <p>Skeletor</p>
                         <img src="110/900x900/4-1.png" alt="Loophead #110"/>
                         <img src="comps/skeletor.png" alt="Skeletor"/>
+                    </div>
+                    <div class="comp">
+                        <p><b>143</b></p>
+                        <p>Whitebeard</p>
+                        <img src="143/900x900/0-3.png" alt="Loophead #143"/>
+                        <img src="comps/whitebeard.png" alt="Whitebeard"/>
                     </div>
                     <div class="comp">
                         <p><b>370</b></p>
@@ -220,6 +226,12 @@
                         <p>The Riddler</p>
                         <img src="1006/900x900/1-3.png" alt="Loophead #1006"/>
                         <img src="comps/riddler.png" alt="The Riddler"/>
+                    </div>
+                    <div class="comp">
+                        <p><b>1020</b></p>
+                        <p>Brook</p>
+                        <img src="1020/900x900/3-4.png" alt="Loophead #1020"/>
+                        <img src="comps/brook.png" alt="Aang"/>
                     </div>
                     <div class="comp">
                         <p><b>1026</b></p>
