--- a/looplegangers.html
+++ b/looplegangers.html
@@ -17,16 +17,19 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="container">
-            <div class="comp">
+            <div class="text">
                 <h1>Looplegangers Archive</h1>
                 <h3>A list of loopalikes the community has noticed between Loopheads and pop-culture.</h3>
             </div>
-            <div class="drop">
+            <div class="text">
                 <hr noshade>
+            </div>
+            <div class="drop">
+                <h1>Loopheads Airdrop No. 1: IDs #101 - #1100</h2>
                 <!-- <button>Uncanny Valley</button> -->
                 <!-- <button>Characters</button> -->
-                <h2>Loopheads Airdrop No. 1: IDs #101 - #1100</h2>
                 <div class="category" id="drop1-valley">
+                    <h2>Uncanny Loopalike Series</h2>
                     <div class="comp">
                         <p><b>X01 / 1001</b></p>
                         <p>Chuck Norris</p>
@@ -149,6 +152,7 @@
                     </div>
                 </div>
                 <div class="category" id="drop1-unique">
+                    <h2>Unique Characters</h2>
                     <div class="comp">
                         <p><b>110</b></p>
                         <p>Skeletor</p>
