feat: initial conversion to php

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="comp">
                 <a href="https://explorer.loopalikes.club"><button>Loopheads Explorer</button></a>
-                <a href="/looplegangers.html"><button>Looplegangers</button></a>
+                <a href="/looplegangers.php"><button>Looplegangers</button></a>
             </div>
         </div>
     </body>
