fix: spacing and alignment

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p>For more info on the Moody Brain collection, visit the official sites:<br /><a href="https://loopheads.info">https://loopheads.info</a> &bull; <a href="https://loopheads.world">https://loopheads.world</a></p>
                 <p>Check out the official collection on OpenSea:<br /><a href="https://opensea.io/collection/moody-brain-loopring"><i><b>Moody Brain by Loopring</b></i></a></p>
             </div>
-            <div class="comp">
+            <div class="filters home">
                 <a href="https://explorer.loopalikes.club"><button>Loopheads Explorer</button></a>
                 <a href="/looplegangers.php"><button>Looplegangers</button></a>
             </div>
