update: loopheadexplorer.io

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <p>Check out the official collection on OpenSea:<br /><a href="https://opensea.io/collection/moody-brain-loopring"><i><b>Moody Brain by Loopring</b></i></a></p>
             </div>
             <div class="filters home">
-                <a href="https://explorer.loopalikes.club"><button>Loopheads Explorer</button></a>
+                <a href="https://loopheadexplorer.io/"><button>Loopheads Explorer</button></a>
                 <a href="/looplegangers.php"><button>Looplegangers</button></a>
             </div>
         </div>
