feat: fancy font

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>Loopalike Club</title>
         <meta name="description" content="A fan-made site showing loopalikes the community has noticed between the Loopheads and various celebrities/characters from pop culture.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -20,8 +20,8 @@
             <div id="about">
                 <p><small><i>This is a fan-made site for all things Loopheads from the Moody Brain NFT Collection.</i></small></p>
                 <img src="smash_chaos_900x900.gif" alt="Loopheads Showcase" />
-                <p>For more info on the Moody Brain collection, visit the official sites:<br /><a href="https://loopheads.info">https://loopheads.info</a> &bull; <a href="https://loopheads.world">https://loopheads.world</a></p>
-                <p>Check out the official collection on OpenSea:<br /><a href="https://opensea.io/collection/moody-brain-loopring"><i><b>Moody Brain by Loopring</b></i></a></p>
+                <p>For more info on the Moody Brain collection, visit the official sites:<br /><br /><a href="https://loopheads.info">https://loopheads.info</a> &bull; <a href="https://loopheads.world">https://loopheads.world</a></p>
+                <p><br />Check out the official collection on OpenSea:<br /><a href="https://opensea.io/collection/moody-brain-loopring"><i><b>Moody Brain by Loopring</b></i></a></p>
             </div>
             <div class="filters home">
                 <a href="https://loopheadexplorer.io/"><button>Loopheads Explorer</button></a>
