fix: some mobile alignment and sizing

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <div class="filters home">
                 <a href="https://loopheadexplorer.io/"><button>Loopheads Explorer</button></a>
                 <a href="/looplegangers.php"><button>Looplegangers</button></a>
+                <a href="/origins.php"><button>Origin Stories</button></a>
+                <a href="/gifs.php"><button>GIF Animations</button></a>
             </div>
         </div>
     </body>
