add: origin stories

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="https://loopheadexplorer.io/"><button>Loopheads Explorer</button></a>
                 <a href="/looplegangers.php"><button>Looplegangers</button></a>
                 <a href="/origins.php"><button>Origin Stories</button></a>
-                <a href="/gifs.php"><button>GIF Animations</button></a>
+                <!-- <a href="/gifs.php"><button>GIF Animations</button></a> -->
             </div>
         </div>
     </body>
