chore: move images to their own directory

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         <div id="container">
             <div id="about">
                 <p><small><i>This is a fan-made site for all things Loopheads from the Moody Brain NFT Collection.</i></small></p>
-                <img src="smash_chaos_900x900.gif" alt="Loopheads Showcase" />
-                <p>For more info on the Moody Brain collection, visit the official sites:<br /><br /><a href="https://loopheads.info">https://loopheads.info</a> &bull; <a href="https://loopheads.world">https://loopheads.world</a></p>
-                <p><br />Check out the official collection on OpenSea:<br /><a href="https://opensea.io/collection/moody-brain-loopring"><i><b>Moody Brain by Loopring</b></i></a></p>
+                <img src="images/smash_chaos_900x900.gif" alt="Loopheads Showcase" />
             </div>
             <div class="filters home">
+                <a href="https://loopheads.info"><button>https://loopheads.info</button></a>
+                <a href="https://loopheads.world"><button>https://loopheads.world</button></a>
+                <a href="https://opensea.io/collection/moody-brain-loopring"><button>OpenSea Collection</button></a>
                 <a href="https://loopheadexplorer.io/"><button>Loopheads Explorer</button></a>
                 <a href="/looplegangers.php"><button>Looplegangers</button></a>
                 <a href="/origins.php"><button>Origin Stories</button></a>
