--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         <meta name="description" content="A fan-made site for all things Moody Brain by Loopring.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/main.css">
+
+        <!-- Favicons -->
+        <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+        <link rel="manifest" href="images/favicon/site.webmanifest">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -22,8 +28,8 @@
                 <img src="images/smash_chaos_900x900.gif" alt="Loopheads Showcase" />
             </div>
             <div class="filters home">
-                <a href="https://loopheads.info"><button>https://loopheads.info</button></a>
-                <a href="https://loopheads.world"><button>https://loopheads.world</button></a>
+                <a href="https://loopheads.info"><button>loopheads.info</button></a>
+                <a href="https://loopheads.world"><button>loopheads.world</button></a>
                 <a href="https://opensea.io/collection/moody-brain-loopring"><button>OpenSea Collection</button></a>
                 <a href="https://loopheadexplorer.io/"><button>Loopheads Explorer</button></a>
                 <a href="/looplegangers.php"><button>Looplegangers</button></a>
