fix: capitilize links on homepage

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                 <img src="images/smash_chaos_900x900.gif" alt="Loopheads Showcase" />
             </div>
             <div class="filters home">
-                <a href="https://loopheads.info"><button>loopheads.info</button></a>
-                <a href="https://loopheads.world"><button>loopheads.world</button></a>
-                <a href="https://opensea.io/collection/moody-brain-loopring"><button>OpenSea Collection</button></a>
-                <a href="https://loopheadexplorer.io/"><button>Loopheads Explorer</button></a>
-                <a href="/looplegangers.php"><button>Looplegangers</button></a>
-                <a href="/origins.php"><button>Origin Stories</button></a>
+                <a href="https://loopheads.info"><button>LOOPHEADS.INFO</button></a>
+                <a href="https://loopheads.world"><button>LOOPHEADS.WORLD</button></a>
+                <a href="https://opensea.io/collection/moody-brain-loopring"><button>OPENSEA COLLECTION</button></a>
+                <a href="https://loopheadexplorer.io/"><button>LOOPHEADS EXPLORER</button></a>
+                <a href="/looplegangers.php"><button>LOOPLEGANGERS</button></a>
+                <a href="/origins.php"><button>ORIGIN STORIES</button></a>
                 <!-- <a href="/gifs.php"><button>GIF Animations</button></a> -->
             </div>
         </div>
