--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <meta name="description" content="A fan-made site for all things Moody Brain by Loopring.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="preload" href="css/fonts/Unifont.woff" as="font" type="font/woff" crossorigin>
+        <link rel="preload" href="css/fonts/Unifont.svg" as="font" type="font/svg" crossorigin>
+        <link rel="preload" href="css/fonts/Unifont.eot" as="font" type="font/embedded-opentype" crossorigin>
 
         <!-- Favicons -->
         <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
@@ -34,7 +37,8 @@
                 <a href="https://loopheadexplorer.io/"><button>LOOPHEADS EXPLORER</button></a>
                 <a href="/looplegangers.php"><button>LOOPLEGANGERS</button></a>
                 <a href="/origins.php"><button>ORIGIN STORIES</button></a>
-                <!-- <a href="/gifs.php"><button>GIF Animations</button></a> -->
+                <!-- <a href="/info.html"><button>INFO LINKS</button></a> -->
+                <!-- <a href="/gifs.php"><button>GIF ANIMATIONS</button></a> -->
             </div>
         </div>
     </body>
