fix: external links in new tab

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <img src="images/smash_chaos_900x900.gif" alt="Loopheads Showcase" />
             </div>
             <div class="filters home">
-                <a href="https://loopheads.info"><button>LOOPHEADS.INFO</button></a>
-                <a href="https://loopheads.world"><button>LOOPHEADS.WORLD</button></a>
-                <a href="https://opensea.io/collection/moody-brain-loopring"><button>OPENSEA COLLECTION</button></a>
-                <a href="https://loopheadexplorer.io/"><button>LOOPHEADS EXPLORER</button></a>
+                <a target="_blank" href="https://loopheads.info"><button>LOOPHEADS.INFO</button></a>
+                <a target="_blank" href="https://loopheads.world"><button>LOOPHEADS.WORLD</button></a>
+                <a target="_blank" href="https://opensea.io/collection/moody-brain-loopring"><button>OPENSEA COLLECTION</button></a>
+                <a target="_blank" href="https://loopheadexplorer.io/"><button>LOOPHEADS EXPLORER</button></a>
                 <a href="/looplegangers.php"><button>LOOPLEGANGERS</button></a>
                 <a href="/origins.php"><button>ORIGIN STORIES</button></a>
                 <!-- <a href="/info.html"><button>INFO LINKS</button></a> -->
