--- a/modules/footer.html
+++ b/modules/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    send loops for noodz to <a href="https://sk33z3r.site" target="_blank">sk33z3r.eth</a>
+    sites and other things by <a href="https://sk33z3r.site" target="_blank">sk33z3r.eth</a>
 </footer>
 </body>
 </html>
