--- a/modules/footer.html
+++ b/modules/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    sites and other things by <a href="https://sk33z3r.site" target="_blank">sk33z3r.eth</a>
+    this site by <a href="https://sk33z3r.site" target="_blank">sk33z3r.eth</a>
 </footer>
 </body>
 </html>
