chore: cleanup CSS

--- a/modules/header1.html
+++ b/modules/header1.html
@@ -13,6 +13,7 @@
 
         <!-- Stylesheets and Fonts -->
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/mobile.css">
         <link rel="preload" href="css/fonts/Unifont.woff" as="font" type="font/woff" crossorigin>
 
         <!-- Favicons -->
